# sea-motor-control

./: .gitignore  README.md  config.yaml  core.py  run.py
control/: CMakeLists.txt  init_can.sh  remove_data_files.sh  run_ctrl_SEA.sh  run_ctrl_basic.sh  run_ctrl_imped.sh  vars_sys_editme.txt  vars_sys_key.txt
control/ATIDAQ/: CMakeLists.txt  atidaq_funcs.c  atidaq_funcs.h  ftconfig.c  ftrt.c
control/GyemsCan/: CMakeLists.txt  gyems_can_functions.cpp  gyems_can_functions.h
control/InnfosCAN/: CMakeLists.txt  innfos_can_functions.cpp  innfos_can_functions.hpp  misc_functions.hpp
control/MITcan/: CMakeLists.txt  SocketCAN.cpp  SocketCAN.hpp  mitcan.cpp  mitcan.h  test.cpp
control/Model526/: CMakeLists.txt  model526.c  model526.h  model526_old.c  model526_old.h
control/RenishawCAN/: CMakeLists.txt  misc_functions.cpp  misc_functions.hpp  renishaw_can_functions.cpp  renishaw_can_functions.hpp
control/SocketCAN/: CMakeLists.txt  SocketCAN.cpp
control/apps/: CMakeLists.txt  SEA_model.c  _macros_files_sys.h  _macros_innfos.h  _main_ctrl_SEA.cpp  _main_ctrl_basic.cpp  _main_ctrl_imped.cpp  _test_ctrl_SEA.cpp  _test_ctrl_imped.cpp  _test_ctrl_multi_mode.cpp  _test_motor_basic.cpp  _test_scripts.hpp  atidaq_help.c  atidaq_help.h  control_funcs.c  data_file_macros_gen.h  innfoscan_help.cpp  innfoscan_help.hpp
control/apps_encoder/: CMakeLists.txt  SEA_model.c  SEA_model.h  _macros_files_sys.h  _main_ctrl_SEA.cpp  _main_ctrl_basic.cpp  _main_file_gen.c  _test_ctrl_SEA.cpp  _test_ctrl_imped.cpp  _test_scripts.hpp  atidaq_help.c  atidaq_help.h  control_funcs.c  control_funcs.h  data_file_macros_gen.c  data_file_macros_gen.h  digital_filters.c  innfoscan_help.hpp  spdlog_init.cpp  spdlog_init.hpp  test_data_file_macros_gen
control/calibration_mini58/: FT22694.cal  FT30578.cal
control/main/: CMakeLists.txt  SEA_model.c  _macros_files_sys.h  _test_scripts_zhimin.hpp  atidaq_help.c  atidaq_help.h  control_funcs.h  data_file_macros_gen.c  digital_filters.c  digital_filters.h  test_mit_can_zhimin.cpp
control/rtsetup/: CMakeLists.txt  rtsetup.c  rtsetup.h  rtutils.c  rtutils.h
control/scripts/: configure_motor_exo.py  configure_motor_manip.py  extract_logvar.sh  grub  init_can.sh  install_reqs.sh  itit_can.sh  logfile2csv.sh  mb039_test.py  mklatencyplot.bash  plot_log_var.py  plot_stream.sh  pos_experiment_plot.py  remote_plot.py  s526_test.py  start_desktop.sh  test_imus.py
control/test_gyems/: CMakeLists.txt  test.cpp
control/thread_service/: CMakeLists.txt  thread_service.cpp  thread_service.hpp
gan/: __init__.py  datasets.py  test.py  train.py  utils.py
gan/model/: __init__.py  models.py  stylegan.py
utils/: __init__.py  font2img.py  graphics2svg.py  img2traj.py  one_stroke_generator.py  utils.py
